--- a/css/theme/source/pikestreet.scss
+++ b/css/theme/source/pikestreet.scss
@@ -97,6 +97,12 @@ section.has-light-background
     box-shadow: none;
 }
 
+.reveal.pikestreet {
+    a { 
+        text-decoration: underline;
+    }
+}
+
 // Alternative H1 ------------------------------
 .reveal {
     h1.alt, h2.alt, h3.alt, h4.alt {
@@ -149,6 +155,11 @@ div.icon-group {
     word-wrap: normal;
     background: #fff;
     color: #333;
+}
+
+.reveal pre code::selection {
+    color: #333;
+    background: #DDF7FF;
 }
 
 // Improve Video Background --------------------
